Add a visitor that will expand query terms based on language analysis. LanguageAwareAnalyzer is based on lucene's Analyzer. Default implementations for most lucene analyzers provided.
QueryParameters and QueryOptions can enable language analysis and disable stemming,
lemmatization, bigramming or unigramming on a per-language basis